--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 					<!-- <p>Thanks for a great fall semester. Stay tuned for our next show announcement!</p> -->
 
 					<!-- TODO: End of spring semester -->
-					<!-- <p>Thanks for a great 2019 - 2020 season!<br/><br/>
+					<p>Thanks for a great 2022 - 2023 season!<br/><br/>
 						<b>Find us in the fall @starcourseuiuc</b>
-						<br/> to join our staff for the 2020 - 2021 school year.
+						<br/> to join our staff for the 2023 - 2024 school year.
 						<br/>
 						<a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
 						<a href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
@@ -140,8 +140,8 @@
 					<br/> -->
 
 					<!-- TODO: End of spring semester -->
-					<!-- <p>Thanks for a great 2019 - 2020 season!<br/><br/>
-						<b>Find us at Quad Day on Sunday August 22th, 2021 from 12-4PM </b>
+					<!--<p>Thanks for a great 2022 - 2023 season!<br/><br/>
+						<!--<b>Find us at Quad Day on Sunday August 22th, 2021 from 12-4PM </b>
                         <br/> to join our staff for the 2021 - 2022 school year.<br/>
                         <a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
 						<a href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
@@ -165,14 +165,14 @@
 
 
 					<!-- TODO: Show announcements and tickets (template) -->
-					<img height="40%" width="40%" src="img/posters/Rescheduled_Armani_poster.png"/>
-					<p>
+					<!--<img height="40%" width="40%" src="img/posters/Rescheduled_Armani_poster.png"/>
+					<!--<p>
 						<br>Star Course presents<br>
 						<b>Armani White</b><br><br>
 						<!-- <br>
 						with opener <i><a href="link here" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br>
 						<br> -->
-						<b>Wednesday April 5th, 2023</b><br>
+						<!--<b>Wednesday April 5th, 2023</b><br>
 						Doors 7pm | Show 7:30pm<br>
 						Students $16 | Public $24<br>
 						<br>
@@ -249,6 +249,7 @@
 					<!-- last season's shows -->
 					<div class="row lastSeasonPosters" style="margin-left: 2px; margin-right: 2px;">
 						<h4 class="text-center"> 2022 - 2023 Season </h4>
+						<img src="img/posters/Rescheduled_Armani_poster.png" title="Armani White" style="margin-top: 5px;" height="250">
 						<img src="img/posters/SALES_poster.png" title="SALES" style="margin-top: 5px;" height="250">
 						<!-- <p><br></p> -->
 					</div>
