--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
 					<!-- last season's shows -->
 					<div class="row lastSeasonPosters" style="margin-left: 2px; margin-right: 2px;">
 						<h4 class="text-center"> 2022 - 2023 Season </h4>
+						<img src="img/posters/sean_kingston_springjam23.jpg" title="Sean Kingston" style="margin-top: 5px;" height="250">
 						<img src="img/posters/Rescheduled_Armani_poster.png" title="Armani White" style="margin-top: 5px;" height="250">
 						<img src="img/posters/SALES_poster.png" title="SALES" style="margin-top: 5px;" height="250">
 						<!-- <p><br></p> -->
