--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					<!-- <p>Thanks for a great fall semester. Stay tuned for our next show announcement!</p> -->
 
 					<!-- TODO: End of spring semester -->
-					<p>Thanks for a great 2022 - 2023 season!<br/><br/>
+					<p>Welcome to the 2023 - 2024 season!<br/><br/>
 						<b>Find us in the fall @starcourseuiuc</b>
 						<br/> to join our staff for the 2023 - 2024 school year.
 						<br/>
