--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
 					<!--<img height="40%" width="40%" src="img/posters/Rescheduled_Armani_poster.png"/>
 					<!--<p>
 						<br>Star Course presents<br>
-						<b>Armani White</b><br><br>
+						<b>redveil</b><br><br>
 						<!-- <br>
 						with opener <i><a href="link here" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br>
 						<br> -->
-						<!--<b>Wednesday April 5th, 2023</b><br>
+						<!--<b>Wednesday October 7th, 2023</b><br>
 						Doors 7pm | Show 7:30pm<br>
-						Students $16 | Public $24<br>
+						Students $20 | Public $30<br>
 						<br>
 						<b>Foellinger Auditorium</b><br>
 						709 S Mathews Ave<br>
@@ -184,7 +184,7 @@
 						Foellinger Auditorium is reserved seating only.<br>
 						No backpacks, food, or drink allowed.<br>
 						Foellinger Auditorium is a non-smoking venue.<br><br>
-						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/EVExecMacro?linkID=illinois&evm=myac&msgCode=32000&shopperContext=ST&returnURL=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&url=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST"
+						<a href="http://StateFarmCenter.com/Redveil"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
 						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE22%3A0302%3A&linkID=illinois&&dataAccId=863&locale=en_US&siteId=ev_illinois"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
