--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@
 
 
 					<!-- TODO: Show announcements and tickets (template) -->
-					<!--<img height="40%" width="40%" src="img/posters/Rescheduled_Armani_poster.png"/>
+					<!--<img height="40%" width="40%" src="img/posters/REDVEIL Star Course Poster_REDVEIL POSTER no qr.jpg"/>
 					<!--<p>
 						<br>Star Course presents<br>
 						<b>redveil</b><br><br>
 						<!-- <br>
-						with opener <i><a href="link here" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br>
+						with opener <i><a href="link here" style="border-bottom:1px dashed #ccc;">To Be Announced</a></i><br>
 						<br> -->
-						<!--<b>Wednesday October 7th, 2023</b><br>
+						<!--<b>Saturday October 7th, 2023</b><br>
 						Doors 7pm | Show 7:30pm<br>
 						Students $20 | Public $30<br>
 						<br>
@@ -186,7 +186,7 @@
 						Foellinger Auditorium is a non-smoking venue.<br><br>
 						<a href="http://StateFarmCenter.com/Redveil"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE22%3A0302%3A&linkID=illinois&&dataAccId=863&locale=en_US&siteId=ev_illinois"
+						<a href="http://StateFarmCenter.com/Redveil"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
 					 	<!-- <a href="facebook event link here"
 							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br> -->
