--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 				<!-- TODO: uncomment 'upcoming events' when a show's announced -->
 				<!-- <h2>UPCOMING EVENTS</h2> -->
 				<div class="col-lg-8 col-lg-offset-2">
+					<img height="50%" width="50%" src="img/posters/REDVEIL Star Course Poster_REDVEIL POSTER no qr.jpg"/>
 					
 					<!-- TODO: End of fall Semester -->
 					<!-- <p>Thanks for a great fall semester. Stay tuned for our next show announcement!</p> -->
