--- a/index.html
+++ b/index.html
@@ -121,9 +121,29 @@
 				
 				<!-- UPCOMING EVENTS -->
 				<!-- TODO: uncomment 'upcoming events' when a show's announced -->
-				<!-- <h2>UPCOMING EVENTS</h2> -->
+				<h2>UPCOMING EVENTS</h2>
 				<div class="col-lg-8 col-lg-offset-2">
 					<img height="50%" width="50%" src="img/posters/REDVEIL Star Course Poster_REDVEIL POSTER no qr.jpg"/>
+					<p>
+						<br>Star Course Presents:<br>
+						<b>redveil</b><br>
+						<b>Saturday October 7th, 2023</b><br>
+						Doors 7:00pm | Show 7:30pm<br>
+						Students $20 | Public $25<br>
+						<br>
+						<b>Foellinger Auditorium</b><br>
+						709 S Mathews Ave<br>
+						Urbana, IL 61801<br>
+						<br>
+						Additional online service fees apply.<br>
+						Foellinger Auditorium is reserved seating only.<br>
+						No backpacks, food, or drink allowed.<br>
+						Foellinger Auditorium is a non-smoking venue.<br><br>
+						<a href="http://StateFarmCenter.com/Redveil"
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
+						<a href="http://StateFarmCenter.com/Redveil"
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
+					</p>
 					
 					<!-- TODO: End of fall Semester -->
 					<!-- <p>Thanks for a great fall semester. Stay tuned for our next show announcement!</p> -->
