--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 				<!-- UPCOMING EVENTS -->
 				<!-- TODO: uncomment 'upcoming events' when a show's announced -->
 				<h2>UPCOMING EVENTS</h2>
-				<div class="col-lg-8 col-lg-offset-2">
+				<!--div class="col-lg-8 col-lg-offset-2">
 					<img height="50%" width="50%" src="img/posters/REDVEIL Star Course Poster_REDVEIL POSTER no qr.jpg"/>
 					<p>
 						<br>Star Course Presents:<br>
@@ -146,7 +146,7 @@
 					</p>
 					
 					<!-- TODO: End of fall Semester -->
-					<!-- <p>Thanks for a great fall semester. Stay tuned for our next show announcement!</p> -->
+					<-- <p>Thanks for a great fall semester. Stay tuned for our next show announcement!</p> -->
 
 					<!-- TODO: End of spring semester -->
 					<p>Welcome to the 2023 - 2024 season!<br/><br/>
