--- a/index.html
+++ b/index.html
@@ -269,10 +269,8 @@
 					<!-- TODO: replace this with most-recent season and move this block into posters section below -->
 					<!-- last season's shows -->
 					<div class="row lastSeasonPosters" style="margin-left: 2px; margin-right: 2px;">
-						<h4 class="text-center"> 2022 - 2023 Season </h4>
-						<img src="img/posters/SALES_poster.png" title="SALES" style="margin-top: 5px;" height="250">
-						<img src="img/posters/Rescheduled_Armani_poster.png" title="Armani White" style="margin-top: 5px;" height="250">
-						<img src="img/posters/sean_kingston_springjam23.png" title="Sean Kingston" style="margin-top: 5px;" height="250">
+						<h4 class="text-center"> 2023 - 2024 Season </h4>
+						<img src="img/posters/REDVEIL Star Course Poster_REDVEIL POSTER no qr.jpg" title="redveil" style="margin-top: 5px;" height="250">
 						<!-- <p><br></p> -->
 					</div>
 
@@ -308,6 +306,13 @@
 							<p><br></p>
 						</div>
 						<br> -->
+			<div class="row lastSeasonPosters" style="margin-left: 2px; margin-right: 2px;">
+				<h4 class="text-center"> 2022 - 2023 Season </h4>
+				<img src="img/posters/SALES_poster.png" title="SALES" style="margin-top: 5px;" height="250">
+				<img src="img/posters/Rescheduled_Armani_poster.png" title="Armani White" style="margin-top: 5px;" height="250">
+				<img src="img/posters/sean_kingston_springjam23.png" title="Sean Kingston" style="margin-top: 5px;" height="250">
+					</div>
+					<be>
 			<div class="row lastSeasonPosters" style="margin-left: 2px; margin-right: 2px;">
 			<h4 class="text-center"> 2021 - 2022 Season </h4>
 			<img src="img/posters/bbPoster.png" title="Beach Bunny" style="margin-top: 5px;" height="250">
