--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
 					<img height="50%" width="50%" src="img/posters/REDVEIL Star Course Poster_REDVEIL POSTER no qr.jpg"/>
 					<p>
 						<br>Star Course Presents:<br>
-						<b>redveil</b><br>
+						<b>Peter McPoland</b><br>
 						<b>Saturday October 7th, 2023</b><br>
 						Doors 7:00pm | Show 7:30pm<br>
-						Students $20 | Public $25<br>
+						Students $15 | Public $23<br>
 						<br>
 						<b>Foellinger Auditorium</b><br>
 						709 S Mathews Ave<br>
