--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
 				
 				<!-- UPCOMING EVENTS -->
 				<!-- TODO: uncomment 'upcoming events' when a show's announced -->
-				<!-- <h2>UPCOMING EVENTS</h2>
-				<!--div class="col-lg-8 col-lg-offset-2">
-					<img height="50%" width="50%" src="img/posters/REDVEIL Star Course Poster_REDVEIL POSTER no qr.jpg"/>
+				<h2>UPCOMING EVENTS</h2>
+				<div class="col-lg-8 col-lg-offset-2">
+					<img height="50%" width="50%" src="img/posters/Peter McPoland.jpg"/>
 					<p>
 						<br>Star Course Presents:<br>
 						<b>Peter McPoland</b><br>
-						<b>Saturday October 7th, 2023</b><br>
+						<b>Thursday April 18th, 2024</b><br>
 						Doors 7:00pm | Show 7:30pm<br>
 						Students $15 | Public $23<br>
 						<br>
@@ -139,14 +139,14 @@
 						Foellinger Auditorium is reserved seating only.<br>
 						No backpacks, food, or drink allowed.<br>
 						Foellinger Auditorium is a non-smoking venue.<br><br>
-						<a href="http://StateFarmCenter.com/Redveil"
-							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-						<a href="http://StateFarmCenter.com/Redveil"
+						<a href="https://fightingillini.evenue.net/signin?uf=ST&ui=SHO&continue=%2Fcgi-bin%2Fncommerce3%2FSEGetEventList%3FgroupCode%3DS%26linkID%3Dillinois%26shopperContext%3DST%26caller%3D%26appCode%3D"
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets, You need to login as a Student to see the discount</a><br>
+						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE23%3A0418%3A&linkID=illinois&"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
 					</p>
 					
 					<!-- TODO: End of fall Semester -->
-					<-- <p>Thanks for a great fall semester. Stay tuned for our next show announcement!</p> -->
+					<!-- <p>Thanks for a great fall semester. Stay tuned for our next show announcement!</p> -->
 
 					<!-- TODO: End of spring semester -->
 					<!-- <p>Welcome to the 2023 - 2024 season!<br/><br/>
