--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				
 				<!-- UPCOMING EVENTS -->
 				<!-- TODO: uncomment 'upcoming events' when a show's announced -->
-				<h2>UPCOMING EVENTS</h2>
+				<<h2>UPCOMING EVENTS</h2>>
 				<div class="col-lg-8 col-lg-offset-2">
 					<img height="50%" width="50%" src="img/posters/Peter McPoland.jpg"/>
 					<p>
@@ -161,7 +161,7 @@
 					<br/> -->
 
 					<!-- TODO: End of spring semester -->
-					<!--<p>Thanks for a great 2022 - 2023 season!<br/><br/>
+					<!--<p>Thanks for a great 2023 - 2024 season!<br/><br/>
 						<!--<b>Find us at Quad Day on Sunday August 22th, 2021 from 12-4PM </b>
                         <br/> to join our staff for the 2021 - 2022 school year.<br/>
                         <a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
@@ -271,6 +271,7 @@
 					<div class="row lastSeasonPosters" style="margin-left: 2px; margin-right: 2px;">
 						<h4 class="text-center"> 2023 - 2024 Season </h4>
 						<img src="img/posters/REDVEIL Star Course Poster_REDVEIL POSTER no qr.jpg" title="redveil" style="margin-top: 5px;" height="250">
+						<img height="50%" width="50%" src="img/posters/Peter McPoland.jpg"/>
 						<!-- <p><br></p> -->
 					</div>
 
@@ -547,7 +548,7 @@
 						Any questions? Contact
 						<i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>
 						<br>
-						2023-2024 Senior Managers: <br />Isra and Carlo
+						2023-2024 Senior Managers: <br />Andrea, Gabby, and Meredith
 					</p>
 					<p>Follow us at @starcourseuiuc for the latest Star Course updates!</p>
 					<ul class="list-inline banner-social-buttons">
