--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				
 				<!-- UPCOMING EVENTS -->
 				<!-- TODO: uncomment 'upcoming events' when a show's announced -->
-				<<h2>UPCOMING EVENTS</h2>>
+				<!-- <h2>UPCOMING EVENTS</h2> -->
 				<div class="col-lg-8 col-lg-offset-2">
 					<img height="50%" width="50%" src="img/posters/Peter McPoland.jpg"/>
 					<p>
