--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
 						<h4 class="text-center"> 2023 - 2024 Season </h4>
 						<img src="img/posters/REDVEIL Star Course Poster_REDVEIL POSTER no qr.jpg" title="redveil" style="margin-top: 5px;" height="250">
 						<img src="img/posters/Peter McPoland.jpg" title="Peter McPoland" height="250">
+						<img src="img/posters/NLE Choppa Spring Jam.jpeg" title="NLE Choppa" height="250">
 						<!-- <p><br></p> -->
 					</div>
 
