--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
 					<!-- TODO: End of fall Semester -->
 					<!-- <p>Thanks for a great fall semester. Stay tuned for our next show announcement!</p> -->
 
-					<!-- TODO: End of spring semester -->
+					<!-- TODO: Start of Fall/Spring semester -->
 					<!-- <p>Welcome to the 2023 - 2024 season!<br/><br/>
 						<b>Find us in the fall @starcourseuiuc</b>
-						<br/> to join our staff for the 2023 - 2024 school year.
+						<br/> to join our staff for the 2023 - 2024 school year, go to our Instagram bio and join our GroupMe!.
 						<br/>
 						<a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
 						<a href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
@@ -160,10 +160,10 @@
 					</p>
 					<br/> -->
 
-					<!-- TODO: End of spring semester -->
-					<!--<p>Thanks for a great 2023 - 2024 season!<br/><br/>
-						<!--<b>Find us at Quad Day</b>
-                        <br/> to join our staff for the 2021 - 2022 school year.<br/>
+					<-- TODO: End of spring semester -->
+					<--<p>Thanks for a great 2023 - 2024 season!<br/><br/>
+						<!--<b>Find us at Quad Day and follow our Instagram</b>
+                        <br/> to join our staff for the 2024 - 2025 school year, go to our Instagram, click our bio, and join our GroupMe.<br/>
                         <a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
 						<a href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
 						<a href="https://instagram.com/starcourseuiuc" target="_blank"><i class="fa fa-instagram fa-fw"></i></a>
