--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
 					</p>
 					<br/> -->
 
-					<-- TODO: End of spring semester -->
+					<!-- TODO: End of spring semester -->
 					<--<p>Thanks for a great 2023 - 2024 season!<br/><br/>
-						<!--<b>Find us at Quad Day and follow our Instagram</b>
+						<--<b>Find us at Quad Day and follow our Instagram</b>
                         <br/> to join our staff for the 2024 - 2025 school year, go to our Instagram, click our bio, and join our GroupMe.<br/>
                         <a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
 						<a href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
