--- a/index.html
+++ b/index.html
@@ -489,16 +489,16 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<br>
 					<h3 class="text-center">NON-DAY OF SHOW</h3>
-					<p><b>Ad Design</b><br/> Creates print and radio advertisements for upcoming shows. Designs content and layout of the Star Course web site.</p>
+					<p><b>Graphic Design</b><br/> Creates print and radio advertisements for upcoming shows. Designs content and layout of the Star Course web site.</p>
 					<p><b>Ad Media</b><br/> Places ads with newspapers and radio stations and organizes ticket giveaway promotions. Coordinates media-artist relations.</p>
-					<p><b>Marketing</b><br/> Oversees group marketing efforts and executes marketing plan by distributing advertising materials to the community. Organizes contests and other online or on-campus promotions.</p>
-					<p><b>Member Relations</b><br/> Manages staff roster, monitors staff involvement, and organizes internal communication.</p>
-					<p><b>Personnel</b><br/> Plans and hosts social events throughout the school year to promote community among members.</p>
+					<p><b>Publicity</b><br/> Oversees group marketing efforts and executes marketing plan by distributing advertising materials to the community. Organizes contests and other online or on-campus promotions.</p>
+					<p><b>Member Operations</b><br/> Manages staff roster, monitors staff involvement, and organizes internal communication.</p>
+					<p><b>Events</b><br/> Plans and hosts social events throughout the school year to promote community among members.</p>
 					<p><b>Social Media</b><br/> Manages online presence and social media accounts.</p>
 					<br><br>
 					<h3 class="text-center">DAY OF SHOW</h3>
 					<p><b>Hospitality</b><br/> Arranges all catering and hospitality efforts for the artist.</p>
-					<p><b>Stage and Production</b><br/> Staffs backstage, production hand, and security positions. Works with venue and production crews for load-in and load-out of artist equipment.</p>
+					<p><b>Stage and Security</b><br/> Staffs backstage, production hand, and security positions. Works with venue and production crews for load-in and load-out of artist equipment.</p>
 					<p><b>Tickets</b><br/> Manages ticket sales and comps distribution with the event venue. Collects and sells tickets on the day of show.</p>
 					<p><b>House and Event Services</b><br/> Coordinates front of house staffing including ushers, ticket takers, door guards, and assistants to merchandise vendors.</p>
 				</div>
@@ -549,7 +549,7 @@
 						Any questions? Contact
 						<i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>
 						<br>
-						2023-2024 Senior Managers: <br />Andrea, Gabby, and Meredith
+						2024-2025 Senior Managers: <br />Andrea, Gabby, and Meredith
 					</p>
 					<p>Follow us at @starcourseuiuc for the latest Star Course updates!</p>
 					<ul class="list-inline banner-social-buttons">
