--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
 			<h4 class="text-center"> 2021 - 2022 Season </h4>
 			<img src="img/posters/bbPoster.png" title="Beach Bunny" style="margin-top: 5px;" height="250">
 			<img src="img/posters/bbnoPoster.png" title="bbno$" style="margin-top: 5px;" height="250">
+			<img src="img/posters/Yung Gravy.jpeg" title="Yung Gravy" style="margin-top: 5px;" height="250">
 						</div>
 						<br>
 			<div class="row lastSeasonPosters" style="margin-left: 2px; margin-right: 2px;">
