--- a/index.html
+++ b/index.html
@@ -126,22 +126,21 @@
 					<img height="50%" width="50%" src="img/posters/Peter McPoland.jpg"/>
 					<p>
 						<br>Star Course Presents:<br>
-						<b>Peter McPoland</b><br>
-						<b>Thursday April 18th, 2024</b><br>
+						<b>Laundry Day</b><br>
+						<b>Wednesday, September 25th, 2024</b><br>
 						Doors 7:00pm | Show 7:30pm<br>
-						Students $15 | Public $23<br>
+						Students $10 | Public $20<br>
 						<br>
-						<b>Foellinger Auditorium</b><br>
-						709 S Mathews Ave<br>
-						Urbana, IL 61801<br>
+						<b>City Center</b><br>
+						505 S Chestnut St<br>
+						Champaign, IL 61801<br>
 						<br>
 						Additional online service fees apply.<br>
 						Foellinger Auditorium is reserved seating only.<br>
 						No backpacks, food, or drink allowed.<br>
 						Foellinger Auditorium is a non-smoking venue.<br><br>
-						<a href="https://fightingillini.evenue.net/signin?uf=ST&ui=SHO&continue=%2Fcgi-bin%2Fncommerce3%2FSEGetEventList%3FgroupCode%3DS%26linkID%3Dillinois%26shopperContext%3DST%26caller%3D%26appCode%3D"
-							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets, You need to login as a Student to see the discount</a><br>
-						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE23%3A0418%3A&linkID=illinois&"
+						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=LD&linkID=illinois&shopperContext=&caller=&appCode="></i> Buy Student Tickets, You need to login as a Student to see the discount</a><br>
+						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=LD&linkID=illinois&shopperContext=&caller=&appCode="
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
 					</p>
 					
@@ -149,7 +148,7 @@
 					<!-- <p>Thanks for a great fall semester. Stay tuned for our next show announcement!</p> -->
 
 					<!-- TODO: Start of Fall/Spring semester -->
-					<!-- <p>Welcome to the 2023 - 2024 season!<br/><br/>
+					<!-- <p>Welcome to the 2024 - 2025 season!<br/><br/>
 						<b>Find us in the fall @starcourseuiuc</b>
 						<br/> to join our staff for the 2023 - 2024 school year, go to our Instagram bio and join our GroupMe!.
 						<br/>
