--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
 						Foellinger Auditorium is reserved seating only.<br>
 						No backpacks, food, or drink allowed.<br>
 						Foellinger Auditorium is a non-smoking venue.<br><br>
-						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=LD&linkID=illinois&shopperContext=&caller=&appCode="></i> Buy Student Tickets, You need to login as a Student to see the discount</a><br>
-						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=LD&linkID=illinois&shopperContext=&caller=&appCode="
+						<a href="statefarmcenter.com/laundryday"></i> Buy Student Tickets, You need to login as a Student to see the discount</a><br>
+						<a href="statefarmcenter.com/laundryday"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
 					</p>
 					
