--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
 				<!-- UPCOMING EVENTS -->
 				<!-- TODO: uncomment 'upcoming events' when a show's announced -->
 				<div class="col-lg-8 col-lg-offset-2">
-					<img height="50%" width="50%" src="img/posters/Peter McPoland.jpg"/>
+					<img height="50%" width="50%" src="img/posters/Laundry Day Poster copy.jpg
+"/>
 					<p>
 						<br>Star Course Presents:<br>
 						<b>Laundry Day</b><br>
