--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
 						Foellinger Auditorium is reserved seating only.<br>
 						No backpacks, food, or drink allowed.<br>
 						Foellinger Auditorium is a non-smoking venue.<br><br>
-						<a href="statefarmcenter.com/laundryday"></i> Buy Student Tickets, You need to login as a Student to see the discount</a><br>
-						<a href="statefarmcenter.com/laundryday"
+						<a href="https://www.statefarmcenter.com/events/detail/laundryday"></i> Buy Student Tickets, You need to login as a Student to see the discount</a><br>
+						<a href="https://www.statefarmcenter.com/events/detail/laundryday"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
 					</p>
 					
