--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
 						Foellinger Auditorium is reserved seating only.<br>
 						No backpacks, food, or drink allowed.<br>
 						Foellinger Auditorium is a non-smoking venue.<br><br>
-						<a href="https://www.statefarmcenter.com/events/detail/laundryday"></i> Buy Student Tickets, You need to login as a Student to see the discount</a><br>
-						<a href="https://www.statefarmcenter.com/events/detail/laundryday"
+						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=LD&linkID=illinois&shopperContext=&caller=&appCode=&_gl=1*11eac6m*_ga*MjA1NTA4MzM3Ny4xNzI0NDMwNDQw*_ga_EYNF8E1S9H*MTcyNDQzMDQzOS4xLjEuMTcyNDQzMDU0Mi4wLjAuMA.."></i> Buy Student Tickets, You need to login as a Student to see the discount</a><br>
+						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=LD&linkID=illinois&shopperContext=&caller=&appCode=&_gl=1*11eac6m*_ga*MjA1NTA4MzM3Ny4xNzI0NDMwNDQw*_ga_EYNF8E1S9H*MTcyNDQzMDQzOS4xLjEuMTcyNDQzMDU0Mi4wLjAuMA.."
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
 					</p>
 					
