--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 						Foellinger Auditorium is reserved seating only.<br>
 						No backpacks, food, or drink allowed.<br>
 						Foellinger Auditorium is a non-smoking venue.<br><br>
-						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=LD&linkID=illinois&shopperContext=&caller=&appCode=&_gl=1*11eac6m*_ga*MjA1NTA4MzM3Ny4xNzI0NDMwNDQw*_ga_EYNF8E1S9H*MTcyNDQzMDQzOS4xLjEuMTcyNDQzMDU0Mi4wLjAuMA.."></i> Buy Student Tickets, You need to login as a Student to see the discount</a><br>
+						<a href="https://fightingillini.evenue.net/signin?uf=ST&ui=SHO&continue=%2Fcgi-bin%2Fncommerce3%2FSEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST%26addrReq%3D%26phoneReq%3D%26RSRC%3D%26RDAT%3D%26linkSource%3D%26shopperContext%3DST&_gl=1*n9rzsy*_ga*MTYzNTY2MzM5MC4xNzI0MzExMDU0*_ga_EYNF8E1S9H*MTcyNDQzMDM1Mi40LjEuMTcyNDQzMDkwMi4wLjAuMA.."></i> To Buy Student Tickets, You need to login as a Student to see the discount</a><br>
 						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=LD&linkID=illinois&shopperContext=&caller=&appCode=&_gl=1*11eac6m*_ga*MjA1NTA4MzM3Ny4xNzI0NDMwNDQw*_ga_EYNF8E1S9H*MTcyNDQzMDQzOS4xLjEuMTcyNDQzMDU0Mi4wLjAuMA.."
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
 					</p>
