--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 					<img height="50%" width="50%" src="img/posters/Laundry Day Poster copy.jpg
 "/>
 					<p>
-						<br>Star Course Presents:<br>
-						<b>Laundry Day</b><br>
+						<br>!Star Course Presents:<br>
+						<b>!Laundry Day</b><br>
 						<b>Wednesday, September 25th, 2024</b><br>
 						Doors 7:00pm | Show 7:30pm<br>
 						Students $10 | Public $20<br>
@@ -144,7 +144,7 @@
 					</p>
 					
 					<!-- TODO: End of fall Semester -->
-					<!-- <p>Thanks for a great fall semester. Stay tuned for our next show announcement!</p> -->
+					<p>Thanks for a great fall show. Stay tuned for our next show announcement!</p> -->
 
 					<!-- TODO: Start of Fall/Spring semester -->
 					<!-- <p>Welcome to the 2024 - 2025 season!<br/><br/>
