--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					<p>Thanks for a great fall show. Stay tuned for our next show announcement!</p> -->
 
 					<!-- TODO: Start of Fall/Spring semester -->
-					<!-- <p>Welcome to the 2024 - 2025 season!<br/><br/>
+					<p>Welcome to the 2024 - 2025 season!<br/><br/>
 						<b>Find us in the fall @starcourseuiuc</b>
 						<br/> to join our staff for the 2024 - 2025 school year, go to our Instagram bio and join our GroupMe!.
 						<br/>
@@ -138,7 +138,7 @@
 
 					<!-- TODO: End of spring semester -->
 
-						<b>Want to join Star Course?</b>
+						<b>Follow our Socials!</b>
                         <br/> to join our staff for the 2024 - 2025 school year, go to our Instagram, click our bio, and join our GroupMe.<br/>
                         <a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
 						<a href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
