--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
 				<!-- UPCOMING EVENTS -->
 					
 					<!-- TODO: End of fall Semester -->
-					<p>Thanks for a great fall show. Stay tuned for our next show announcement!</p> -->
+					<p>Thanks for a great fall show. Stay tuned for our next show announcement!</p>
 
 					<!-- TODO: Start of Fall/Spring semester -->
 					<p>Welcome to the 2024 - 2025 season!<br/><br/>
-						<b>Find us in the fall @starcourseuiuc</b>
-						<br/> to join our staff for the 2024 - 2025 school year, go to our Instagram bio and join our GroupMe!.
+						<b>Want to join Star Course?</b>
+						<br/> To join our staff for the 2024 - 2025 school year, go to our Instagram bio and join our GroupMe!.
 						<br/>
 						<a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
 						<a href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
