--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
 						<b>Want to join Star Course?</b>
 						<br/> To join our staff for the 2024 - 2025 school year, go to our Instagram bio and join our GroupMe!.
 						<br/>
-						<a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
-						<a href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
-						<a href="https://instagram.com/starcourseuiuc" target="_blank"><i class="fa fa-instagram fa-fw"></i></a>
-						<br />
+						<!a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
+						<!a href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
+						<!a href="https://instagram.com/starcourseuiuc" target="_blank"><i class="fa fa-instagram fa-fw"></i></a>
+						<!br />
 					</p>
 					<br/>
 
