--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					<p>Thanks for a great fall show. Stay tuned for our next show announcement!</p>
 
 					<!-- TODO: Start of Fall/Spring semester -->
-					<p>Welcome to the 2024 - 2025 season!<br/><br/>
+					<!>Welcome to the 2024 - 2025 season!<br/><br/!>
 						<b>Want to join Star Course?</b>
 						<br/> To join our staff for the 2024 - 2025 school year, go to our Instagram bio and join our GroupMe!.
 						<br/>
