--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					<!-- TODO: Start of Fall/Spring semester -->
 					<!>Welcome to the 2024 - 2025 season!<br/><br/!>
 						<b>Want to join Star Course?</b>
-						<br/> To join our staff for the 2024 - 2025 school year, go to our Instagram bio and join our GroupMe!.
+						<br/> To join our staff for the 2024 - 2025 school year, go to our Instagram bio and join our GroupMe!
 						<br/>
 						<a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
 						<a href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
