--- a/index.html
+++ b/index.html
@@ -120,6 +120,23 @@
 			<div class="row">
 				
 				<!-- UPCOMING EVENTS -->
+				<!--<img height="40%" width="40%" src="img/posters/REDVEIL Star Course Poster_REDVEIL POSTER no qr.jpg"/>
+					<!--<p>
+						<br>Star Course presents<br>
+						<b>Slow Pulp</b><br><br>
+						<!-- <br>
+						<!--<b>Tuesday, March 4th, 2025</b><br>
+						Early Access 6:30 | Doors 7pm | Show 7:30pm<br>
+						Students $14 | Public $24 | Early Access Additional $5<br>
+						<br>
+						<b>City Center</b><br>
+						505 S Chestnut Street<br>
+						Champaign, IL 61801<br>
+						<br>
+						Additional online service fees apply.<br>
+						<a href="http://StateFarmCenter.com/Redveil"
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
+						<a href="http://StateFarmCenter.com/Redveil">
 					
 					<!-- TODO: End of fall Semester -->
 					<p>Thanks for a great fall show. Stay tuned for our next show announcement!</p>
