--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			<div class="row">
 				
 				<!-- UPCOMING EVENTS -->
-				<!--<img height="40%" width="40%" src="img/posters/REDVEIL Star Course Poster_REDVEIL POSTER no qr.jpg"/>
+				<!--<img height="40%" width="40%" src="img/posters/Slow Pulp General Poster no qr.jpg"/>
 					<!--<p>
 						<br>Star Course presents<br>
 						<b>Slow Pulp</b><br><br>
