--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
 		<div class="container content-section text-center" style="padding-top: 80px; padding-bottom: 30px;">
 			<div class="row">
 				
-				<!-- UPCOMING EVENTS -->
-				<!--<img height="40%" width="40%" src="img/posters/Slow Pulp General Poster no qr.jpg"/>
-					<!--<p>
+				<-- UPCOMING EVENTS --p>
+				<--<img height="40%" width="40%" src="img/posters/Slow Pulp General Poster no qr.jpg"/>
+					<--<p>
 						<br>Star Course presents<br>
 						<b>Slow Pulp</b><br><br>
-						<!-- <br>
-						<!--<b>Tuesday, March 4th, 2025</b><br>
+						<-- <br>
+						<--<b>Tuesday, March 4th, 2025</b><br>
 						Early Access 6:30 | Doors 7pm | Show 7:30pm<br>
 						Students $14 | Public $24 | Early Access Additional $5<br>
 						<br>
