--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 						Additional online service fees apply.<br>
 						<a href="http://StateFarmCenter.com/Redveil"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-						<a href="http://StateFarmCenter.com/Redveil">
+						<a href="https://fightingillini.evenue.net/signin?uf=ST&ui=SHO&continue=%2Fcgi-bin%2Fncommerce3%2FSEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST">
 					
 					<!-- TODO: End of fall Semester -->
 					<p>Thanks for a great fall show. Stay tuned for our next show announcement!</p>
