--- a/index.html
+++ b/index.html
@@ -122,9 +122,10 @@
 				 UPCOMING EVENTS
 					<--<p>
 						<br>Star Course presents<br>
+						<--<img height="40%" width="40%" src="img/posters/Sloe Pulp General Poster"/>
+					<--<p>
 						<b>Slow Pulp</b><br><br>
 						<br>
-						<--<img height="40%" width="40%" src="img/posters/img/posters/Slow Pulp General Poster"/>
 						<b>Tuesday, March 4th, 2025</b><br>
 						Early Access 6:30 | Doors 7pm | Show 7:30pm<br>
 						Students $14 | Public $24 | Early Access Additional $5<br>
