--- a/index.html
+++ b/index.html
@@ -120,11 +120,10 @@
 			<div class="row">
 				
 					<--<p>
-						<b!>Star Course presents<br>
-						<--<img height="40%" width="40%" src="img/posters/Slow Pulp General Poster copy.jpg"/>
+						<br!>Star Course presents:<br>
+						<--<img height="50%" width="50%" src="img/posters/Slow Pulp Black copy.jpg"/>
 					</p>
-						<b>Slow Pulp</b><br><br>
-						<r>
+						<b>!Slow Pulp</b><br>
 						<b>Tuesday, March 4th, 2025</b><br>
 						Early Access 6:30 | Doors 7pm | Show 7:30pm<br>
 						Students $14 | Public $24 | Early Access Additional $5<br>
