--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				
 					<--<p>
 						<br!>Star Course presents:<br>
-						<--<img height="50%" width="50%" src="img/posters/Slow Pulp Black copy.jpg"/>
+						<img height="50%" width="50%" src="img/posters/Slow Pulp Black copy.jpg"/>
 					</p>
 						<b>!Slow Pulp</b><br>
 						<b>Tuesday, March 4th, 2025</b><br>
