--- a/index.html
+++ b/index.html
@@ -119,24 +119,30 @@
 		<div class="container content-section text-center" style="padding-top: 80px; padding-bottom: 30px;">
 			<div class="row">
 				
-					<--<p>
-						<br!>Star Course presents:<br>
-						<img height="50%" width="50%" src="img/posters/Slow Pulp Black copy.jpg"/>
-					</p>
-						<b>!Slow Pulp</b><br>
-						<b>Tuesday, March 4th, 2025</b><br>
+					<!-- TODO: Show announcements and tickets (template) -->
+					<--<img height="40%" width="40%" src="img/posters/REDVEIL Star Course Poster_REDVEIL POSTER no qr.jpg"/>
+					<p>
+						<br>Star Course presents<br>
+						<b>redveil</b><br><br>
+						<-- <br>
+						<--<b>Tuesday March 4th, 2025</b><br>
 						Early Access 6:30 | Doors 7pm | Show 7:30pm<br>
-						Students $14 | Public $24 | Early Access Additional $5<br>
+						Early Access Additional $5 | Students $14 | Public $24<br>
 						<br>
 						<b>City Center</b><br>
 						505 S Chestnut Street<br>
 						Champaign, IL 61801<br>
 						<br>
 						Additional online service fees apply.<br>
-						<a href="http://StateFarmCenter.com/Redveil"
+						<a href="https://fightingillini.evenue.net/signin?uf=ST&ui=SHO&continue=%2Fcgi-bin%2Fncommerce3%2FSEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-						<a href="https://fightingillini.evenue.net/signin?uf=ST&ui=SHO&continue=%2Fcgi-bin%2Fncommerce3%2FSEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST">
-					
+						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=SPULP&linkID=illinois&shopperContext=&caller=&appCode="
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
+					 	<!-- <a href="facebook event link here"
+							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br> -->
+						 <!-- <a href="opener contest google form link here"
+                             			class="btnghost" target="_blank"></i> Opener Contest Submissions</a><br>
+					</p> -->
 					<!-- TODO: End of fall Semester -->
 					<p>Thanks for a great fall show. Stay tuned for our next show announcement!</p>
 
