--- a/index.html
+++ b/index.html
@@ -122,9 +122,8 @@
 					<!-- TODO: Show announcements and tickets (template) -->
 					<--<img height="40%" width="40%" src="img/posters/img/Slow Pulp Black.jpg"/>
 					<p>
-						<br>Star Course presents<br>
+						<br>Star Course Presents..<br>
 						<b>Slow Pulp</b><br><br>
-						<br>
 						<Tuesday March 4th, 2025</b><br>
 						Early Access 6:30 | Doors 7pm | Show 7:30pm<br>
 						Early Access Additional $5 | Students $14 | Public $24<br>
