--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			<div class="row">
 				
 					<!-- TODO: Show announcements and tickets (template) -->
-					<--<img height="40%" width="40%" src="img/posters/img/Slow Pulp Black.jpg"/>
+					<--<img height="40%" width="40%" src="img/posters/img/Slow Pulp Black copy.jpg"/>
 					<p>
 						<br>Star Course Presents..<br>
 						<b>Slow Pulp</b><br><br>
