--- a/index.html
+++ b/index.html
@@ -120,10 +120,9 @@
 			<div class="row">
 				
 					<!-- TODO: Show announcements and tickets (template) -->
-					<--<img height="40%" width="40%" src="img/Slow Pulp Black copy.jpg"/>
-					<p>
 						<br>Star Course Presents..<br>
-						<b>Slow Pulp</b><br><br>
+						<b>Slow Pulp</b><br>
+						<img height="50%" width="50%" src="img/posters/Slow Pulp copy.jpg"/>
 						<Tuesday March 4th, 2025</b><br>
 						Early Access 6:30 | Doors 7pm | Show 7:30pm<br>
 						Early Access Additional $5 | Students $14 | Public $24<br>
