--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 					<!-- TODO: Show announcements and tickets (template) -->
 						<br>Star Course Presents..<br>
 						<b>Slow Pulp</b><br>
-						<img height="50%" width="50%" src="img/posters/Slow Pulp copy.jpg"/>
+						<img height="50%" width="50%"src="img/posters/Slow Pulp Black.jpg"/>
 						<Tuesday March 4th, 2025</b><br>
 						Early Access 6:30 | Doors 7pm | Show 7:30pm<br>
 						Early Access Additional $5 | Students $14 | Public $24<br>
@@ -142,7 +142,7 @@
                              			class="btnghost" target="_blank"></i> Opener Contest Submissions</a><br>
 					</p> -->
 					<!-- TODO: End of fall Semester -->
-					<p>Thanks for a great fall show. Stay tuned for our next show announcement!</p>
+					<p>Thanks for a great fall show. Get excited for our next show, Slow Pulp!</p>
 
 					<!-- TODO: Start of Fall/Spring semester -->
 					<p>Welcome to the 2024 - 2025 season!<br/></p>
