--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 			<div class="row">
 				
 					<!-- TODO: Show announcements and tickets (template) -->
-						<br>Star Course Presents..<br>
-						<b>Slow Pulp</b><br>
+						<br>!Star Course Presents..<br>
+						<b>!Slow Pulp</b><br>
 						<img height="50%" width="50%"src="img/posters/Slow Pulp Black.jpg"/>
 						<Tuesday March 4th, 2025</b><br>
 						Early Access 6:30 | Doors 7pm | Show 7:30pm<br>
