--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						<b>Slow Pulp</b><br>
 						<br>
 						<img height="40%" width="40%"src="img/posters/Slow Pulp Black.jpg"/>
-						<b>Tuesday March 4th, 2025</b><br>
+						<Tuesday March 4th, 2025</b><br>
 						Early Access 6:30 | Doors 7pm | Show 7:30pm<br>
 						Early Access Additional $5 | Students $14 | Public $24<br>
 						<br>
