--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			<div class="row">
 				
 					<!-- TODO: Show announcements and tickets (template) -->
-						<br>Star Course Presents<br>
+						<h3>Star Course Presents<h3>
 						<b>Slow Pulp</b><br>
 						<br>
 						<img height="40%" width="40%"src="img/posters/Slow Pulp Black.jpg"/>
