--- a/index.html
+++ b/index.html
@@ -260,6 +260,11 @@
 					<!-- TODO: replace this with most-recent season and move this block into posters section below -->
 					<!-- last season's shows -->
 					<div class="row lastSeasonPosters" style="margin-left: 2px; margin-right: 2px;">
+						<h4 class="text-center"> 2024 - 2025 Season </h4>
+						<img src="img/posters/Laundry Day Poster copy.jpg" title="Laundry Day" style="margin-top: 5px;" height="250">
+						<!-- <p><br></p> -->
+					</div>
+					<div class="row lastSeasonPosters" style="margin-left: 2px; margin-right: 2px;">
 						<h4 class="text-center"> 2023 - 2024 Season </h4>
 						<img src="img/posters/REDVEIL Star Course Poster_REDVEIL POSTER no qr.jpg" title="redveil" style="margin-top: 5px;" height="250">
 						<img src="img/posters/Peter McPoland.jpg" title="Peter McPoland" height="250">
