--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 					<!-- TODO: End of fall Semester -->
 						<br>
 					<!-- TODO: Start of Fall/Spring semester -->
-						<b>Want to join Star Course?</b>
+						<h2>Want to join Star Course?</h2>
 						<br/> To join our staff for the 2024 - 2025 school year, go to our Instagram bio and join our GroupMe!
 						<br/>
 						<a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
