--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
 			<div class="row">
 				
 					<!-- TODO: Show announcements and tickets (template) -->
-						<!--<h3>Star Course Presents<h3>
-						<b>Slow Pulp</b><br>
+						<--<h3>Star Course Presents<h3>
+						<b>almost monday</b><br>
 						<br>
-						<img height="40%" width="40%"src="img/posters/Slow Pulp Black.jpg"/>
+						<img height="40%" width="40%"src="img/posters/almost monday.png"/>
 				
-						<Tuesday March 4th, 2025</b><br>
+						<Tuesday May 6th, 2025</b><br>
 						Early Access 6:30 | Doors 7pm | Show 7:30pm<br>
 						Early Access Additional $5 | Students $14 | Public $24<br>
 						<br>
@@ -134,10 +134,9 @@
 						Champaign, IL 61801<br>
 						<br>
 						Additional online service fees apply.<br>
-						<a href="https://fightingillini.evenue.net/signin?uf=ST&ui=SHO&continue=%2Fcgi-bin%2Fncommerce3%2FSEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST"
-							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=SPULP&linkID=illinois&shopperContext=&caller=&appCode="
-							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
+						<a href="https://fightingillini.evenue.net/signin?uf=ST&ui=SHO&continue=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&_gl=1*fm3xsx*_ga*MTU5MDk4OTg2OC4xNjgzNjUwOTc2*_ga_EYNF8E1S9H*MTczODM0MjA4MC4yOS4xLjE3MzgzNDIwODQuMC4wLjA."></i> Buy Student Tickets</a><br>
+						<a href="https://fightingillini.evenue.net/event/E24/0506"></i> Buy Public Tickets</a><br>
+						<a href="https://fightingillini.evenue.net/event/E24/0506V"></i> Buy Early Access Add-On</a><br>
 					 	<!-- <a href="facebook event link here"
 							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br> -->
 						 <!-- <a href="opener contest google form link here"
