--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
 			<div class="row">
 				
 					<!-- TODO: Show announcements and tickets (template) -->
-						<!--<h3>Star Course Presents<h3>
+						<--<h3>Star Course Presents<h3>
 						<b>almost monday</b><br>
 						<br>
-						<img height="40%" width="40%"src="img/posters/almost monday.png"/>
+						<img height="40%" width="40%"src="img/almost monday.png"/>
 				
 						<Tuesday May 6th, 2025</b><br>
 						Early Access 6:30 | Doors 7pm | Show 7:30pm<br>
