--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			<div class="row">
 				
 					<!-- TODO: Show announcements and tickets (template) -->
-						<--<h3>Star Course Presents<h3>
+						<!--h3>Star Course Presents<h3>
 						<b>almost monday</b><br>
 						<br>
 						<img height="40%" width="40%"src="img/almost monday.png"/>
