--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			<div class="row">
 				
 					<!-- TODO: Show announcements and tickets (template) -->
-						<!--h3>Star Course Presents<h3>
+						<br>Star Course presents<br>
 						<b>almost monday</b><br>
 						<br>
 						<img height="40%" width="40%"src="img/almost monday.png"/>
@@ -134,9 +134,12 @@
 						Champaign, IL 61801<br>
 						<br>
 						Additional online service fees apply.<br>
-						<a href="https://fightingillini.evenue.net/signin?uf=ST&ui=SHO&continue=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&_gl=1*fm3xsx*_ga*MTU5MDk4OTg2OC4xNjgzNjUwOTc2*_ga_EYNF8E1S9H*MTczODM0MjA4MC4yOS4xLjE3MzgzNDIwODQuMC4wLjA."></i> Buy Student Tickets</a><br>
-						<a href="https://fightingillini.evenue.net/event/E24/0506"></i> Buy Public Tickets</a><br>
-						<a href="https://fightingillini.evenue.net/event/E24/0506V"></i> Buy Early Access Add-On</a><br>
+						<a href="https://fightingillini.evenue.net/signin?uf=ST&ui=SHO&continue=%2Fstudents"
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
+						<a href="https://fightingillini.evenue.net/event/E24/0506"
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
+						<a href="https://fightingillini.evenue.net/event/E24/0506V"
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Early Access Add-On</a><br>
 					 	<!-- <a href="facebook event link here"
 							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br> -->
 						 <!-- <a href="opener contest google form link here"
@@ -145,7 +148,7 @@
 					<!-- TODO: End of fall Semester -->
 						<br>
 					<!-- TODO: Start of Fall/Spring semester -->
-						<h2>Want to join Star Course?</h2>
+						<!--h2>Want to join Star Course?</h2>
 						<br/> To join our staff for the 2024 - 2025 school year, go to our Instagram bio and join our GroupMe!
 						<br/>
 						<a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
