--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
 			<div class="row">
 				
 					<!-- TODO: Show announcements and tickets (template) -->
-						<br>Star Course presents<br>
+						<h2>Star Course presents<h2>
+						<br>
 						<b>almost monday</b><br>
 						<br>
 						<img height="40%" width="40%"src="img/almost monday.png"/>
