--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			<div class="row">
 				
 					<!-- TODO: Show announcements and tickets (template) -->
-						<h2>Star Course presents<h2>
+						<br>Star Course Presents:<br>
 						<br>
 						<b>almost monday</b><br>
 						<br>
