--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				
 					<!-- TODO: Show announcements and tickets (template) -->
 						<h3>Star Course Presents</h3>
-						<b>almost monday</b><br>
+						<b style="font-size: 1.5em;">almost monday</b><br>
 						<br>
 						<img height="40%" width="40%"src="img/almost monday.png"/>
 				
