--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 				<!-- list more roles -->
 				<div class="col-lg-8 col-lg-offset-2">
 					<p><b>Organization</b><br/> Star Course is a non-profit, student-operated organization under the advisory of the State Farm Center in Champaign, IL. As a university talent-buying group, Star Course is remarkably independent. While many schools have small entertainment boards comprised of both faculty and students, Star Course is all students from top to bottom.</p>
-					<p><b>Leadership</b><br/> Each year, Star Course selects 2 Senior Managers and 12 Junior Managers to lead staff through the promotion and production process. Senior Managers contract an average of 2 to 3 shows per semester, and Junior Managers direct staff through each phase of show preparation, marketing, and production.
+					<p><b>Leadership</b><br/> Each year, Star Course selects Senior Managers and 12 Junior Managers to lead staff through the promotion and production process. Senior Managers contract an average of 2 to 3 shows per semester, and Junior Managers direct staff through each phase of show preparation, marketing, and production.
 					</p>
 					<p><b>Experience</b><br/> Star Course members are required to participate in both non-day of show and day of show activities. All members will assist with the marketing in the weeks leading up to a show and will also have the option of working with either the Tickets or Stage & Security committees for the day of show. Star Course is devoted to providing a student learning opportunity for members about the inner workings of the music industry.</p>
 					<p><b>Committment</b><br/> Staff members should be prepared for all-staff meetings, committee meetings, and regular member events. Show dates vary throughout the semester and time commitment varies with the climate of the concert industry. Due to the short-term,fast-paced nature of the industry, staff should be prepared to be on-call and ready for action throughout the semester.</p>
@@ -550,7 +550,7 @@
 						Any questions? Contact
 						<i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>
 						<br>
-						2025-2026 Senior Managers: <br /> Aryanne Navarro,G Moroney, and Kavin Mohan
+						2025-2026 Senior Managers: <br /> Aryanne Navarro, G Moroney, and Kavin Mohan
 					</p>
 					<p>Follow us at @starcourseuiuc for the latest Star Course updates!</p>
 					<ul class="list-inline banner-social-buttons">
