--- a/index.html
+++ b/index.html
@@ -119,33 +119,7 @@
 		<div class="container content-section text-center" style="padding-top: 80px; padding-bottom: 50px;">
 			<div class="row">
 				
-					<!-- TODO: Show announcements and tickets (template) -->
-						<!--<h3>Star Course Presents</h3>
-						<br>
-						<b style="font-size: 1.5em;">almost monday</b><br>
-						<br>
-						<img height="40%" width="40%"src="img/almost monday.png"/>
-				
-						<Tuesday May 6th, 2025</b><br>
-						Early Access 6:30 | Doors 7pm | Show 7:30pm<br>
-						Early Access Additional $5 | Students $14 | Public $24<br>
-						<br>
-						<b>City Center</b><br>
-						505 S Chestnut Street<br>
-						Champaign, IL 61801<br>
-						<br>
-						Additional online service fees apply.<br>
-						<a href="https://fightingillini.evenue.net/signin?uf=ST&ui=SHO&continue=%2Fstudents"
-							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-						<a href="https://fightingillini.evenue.net/event/E24/0506"
-							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
-						<a href="https://fightingillini.evenue.net/event/E24/0506V"
-							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Early Access Add-On</a><br>
-					 	<!-- <a href="facebook event link here"
-							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br> -->
-						 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdRa3OHudqgOPSvPLQWHcDrZB8Wl0tQlKHOgukdISPcaGCh2g/viewform"
-                             			class="btnghost" target="_blank"></i> APPLY TO OPEN FOR ALMOST MONDAY</a><br>
-				-->
+
 					</p>
 					<!-- TODO: End of fall Semester -->
 						<br>
@@ -163,16 +137,12 @@
 					<!-- TODO: End of spring semester -->
 
 	
-					<!-- TODO: Post-Quad Day
+					<-- TODO: Post-Quad Day
 					<p>
 						If you missed us at Quad Day but are still interested in joining,<br>
 						please contact us with any questions at <i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>.<br><br>
-						<b>Info Nights: Tues. August 28th and Thurs. August 30th</b><br>
-						at 6:30pm in Gregory Hall Room 311.<br>
+						<b>Info Nights: Coming soon!</b><br>
 						Come learn more about joining Star Course!<br><br>
-						If you can't make the info nights, come to our first<br>
-						<b>All Staff Meeting on Tues. September 4th</b><br>
-						at 6pm in Foellinger Auditorium.
 					</p>
 					<img height="50%" width="50%" src="img/infonight/infonightflyer2018.jpg"/>
 					<hr style="border-top: dotted 1px;" /><br>
